--- a/Action/action.html
+++ b/Action/action.html
@@ -326,7 +326,6 @@
       <button class="back-button" onclick="goTo('step1')">← Back</button>
     </div>
   </div>
-  
       <div class="step" id="earth">
     <p>Dealing with an ongoing catacylism?</p>
     <div class="button-container">
@@ -348,6 +347,31 @@
     <div class="button-container">
       <button onclick="showResult('result25')">Yes</button>
       <button onclick="showResult('result26')">No</button>
+      <button class="back-button" onclick="goTo('step1')">← Back</button>
+    </div>
+  </div>
+    <!-- Overpowered MC Subpath -->
+    <div class="step" id="opmc">
+    <p>A main character with hidden power?</p>
+    <div class="button-container">
+      <button onclick="goTo('opy')">Yes</button>
+      <button onclick="goTo('opn')">No</button>
+      <button class="back-button" onclick="goTo('step1')">← Back</button>
+    </div>
+  </div>
+      <div class="step" id="opy">
+    <p>Looking for a school setting?</p>
+    <div class="button-container">
+      <button onclick="showResult('result27')">Yes</button>
+      <button onclick="showResult('result28')">No</button>
+      <button class="back-button" onclick="goTo('step1')">← Back</button>
+    </div>
+  </div>
+      <div class="step" id="opn">
+    <p>Main character who knows he's cracked?</p>
+    <div class="button-container">
+      <button onclick="showResult('result29')">Yes</button>
+      <button onclick="showResult('result30')">No</button>
       <button class="back-button" onclick="goTo('step1')">← Back</button>
     </div>
   </div>
@@ -599,12 +623,36 @@
   
   <div class="step" id="result27">
     <div class="result-content">
-      <h2>Recommendation: Mushishi</h2>
+      <h2>Recommendation: The Irregular at Magic High School</h2>
       <img src="https://via.placeholder.com/200x300/333/fff?text=Mushishi" alt="Mushishi" class="anime-poster">
       <p>A meditative journey following Ginko, a "Mushi Master" who travels through rural Japan helping people affected by mysterious elemental creatures invisible to most humans.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
   </div>
+    <div class="step" id="result29">
+    <div class="result-content">
+      <h2>Recommendation: The Misfit of Demon King Academy</h2>
+      <img src="https://via.placeholder.com/200x300/333/fff?text=Mushishi" alt="Mushishi" class="anime-poster">
+      <p>A meditative journey following Ginko, a "Mushi Master" who travels through rural Japan helping people affected by mysterious elemental creatures invisible to most humans.</p>
+      <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
+    </div>
+  </div>
+  <div class="step" id="result30">
+    <div class="result-content">
+      <img src="https://via.placeholder.com/200x300/333/fff?text=Mushishi" alt="Mushishi" class="anime-poster">
+      <p>A meditative journey following Ginko, a "Mushi Master" who travels through rural Japan helping people affected by mysterious elemental creatures invisible to most humans.</p>
+      <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
+    </div>
+  </div>
+  <div class="step" id="result27">
+    <div class="result-content">
+      <h2>Recommendation: The Irregular at Magic High School</h2>
+      <img src="https://via.placeholder.com/200x300/333/fff?text=Mushishi" alt="Mushishi" class="anime-poster">
+      <p>A meditative journey following Ginko, a "Mushi Master" who travels through rural Japan helping people affected by mysterious elemental creatures invisible to most humans.</p>
+      <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
+    </div>
+  </div>
+
   <!-- Additional results would follow the same pattern -->
   <!-- For brevity, I've shown 3 sample results -->
   
