--- a/index.html
+++ b/index.html
@@ -425,21 +425,19 @@
   <div class="step" id="result1">
     <div class="result-content">
       <h2>Recommendation: Symphogear</h2>
-      <img src="https://via.placeholder.com/200x300/333/fff?text=Symphogear" alt="Symphogear" class="anime-poster">
-      <p>An action-packed magical girl series where girls fight using powered armor and J-Pop songs as their weapons. Expect over-the-top action, emotional moments, and incredible musical performances.</p>
+      <img src="/cover/Symphogear.jpg" alt="Symphogear" class="anime-poster">
+      <p>Tsubasa Kazanari and Kanade Amou—the idol duo known as Zwei Wing—use their songs to power ancient weapons known as "symphogears" to combat a deadly alien race called the "Noise." While the general public is aware of the Noise's existence, knowledge of the symphogears are kept a secret. When the Noise attack one of Zwei Wing's concerts, Kanade sacrifices herself to protect a young girl named Hibiki Tachibana, leaving Tsubasa devastated and a fragment of her symphogear embedded within Hibiki. Two years pass and Hibiki is once again dragged into a Noise attack. While rescuing a young girl who has been left behind during the evacuation, she awakens the power of Kanade's symphogear lying within her. Although Tsubasa still grieves over the loss of Kanade, both girls must now learn to work together using their powers to defend humanity against the Noise.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
   </div>
-  
   <div class="step" id="result2">
     <div class="result-content">
       <h2>Recommendation: Magical Girl Lyrical Nanoha</h2>
-      <img src="https://via.placeholder.com/200x300/333/fff?text=Nanoha" alt="Nanoha" class="anime-poster">
+      <img src="/cover/nanoha.jpg" alt="Nanoha" class="anime-poster">
       <p>A more serious take on magical girls with military elements. Follow Nanoha as she befriends and fights other magical beings while developing her powers in this influential series.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
   </div>
-  
   <div class="step" id="result3">
     <div class="result-content">
       <h2>Recommendation: Vampire Hunter D</h2>
@@ -451,16 +449,15 @@
   <div class="step" id="result4">
     <div class="result-content">
       <h2>Recommendation: Hellsing Ultimate</h2>
-      <img src="https://via.placeholder.com/200x300/333/fff?text=Hellsing+Ultimate" alt="Hellsing Ultimate" class="anime-poster">
+      <img src="/cover/hell.webp" alt="Hellsing Ultimate" class="anime-poster">
       <p>A brutal, stylish vampire action series following Alucard, a powerful vampire working for the Hellsing organization to combat supernatural threats with extreme prejudice.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
   </div>
-  
   <div class="step" id="result5">
     <div class="result-content">
       <h2>Recommendation: Jujutsu Kaisen</h2>
-      <img src="https://via.placeholder.com/200x300/333/fff?text=Jujutsu+Kaisen" alt="Jujutsu Kaisen" class="anime-poster">
+      <img src="/cover/jjk.webp" alt="Jujutsu Kaisen" class="anime-poster">
       <p>A modern supernatural action series following Yuji Itadori as he becomes host to a powerful curse and joins a secret organization of jujutsu sorcerers to battle terrifying curses.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -469,7 +466,7 @@
   <div class="step" id="result6">
     <div class="result-content">
       <h2>Recommendation: Mob Psycho 100</h2>
-      <img src="https://via.placeholder.com/200x300/333/fff?text=Mob+Psycho+100" alt="Mob Psycho 100" class="anime-poster">
+      <img src="/cover/mob.webp" alt="Mob Psycho 100" class="anime-poster">
       <p>A unique blend of supernatural action and coming-of-age story about an overpowered esper learning to navigate adolescence while controlling his emotions (and thus his powers).</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
