--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
   <div class="step" id="result3">
     <div class="result-content">
       <h2>Recommendation: Vampire Hunter D</h2>
-      <img src="https://via.placeholder.com/200x300/333/fff?text=Vampire+Hunter+D" alt="Vampire Hunter D" class="anime-poster">
+      <img src="cover/vamp.jpg" alt="Vampire Hunter D" class="anime-poster">
       <p>A classic dark fantasy about a dhampir hunter in a far-future gothic world. Beautiful animation and a brooding atmosphere make this a must-watch for vampire anime fans.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
