--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
   <div class="step" id="result1">
     <div class="result-content">
       <h2>Recommendation: Symphogear</h2>
-      <img src="Anime/cover/Symphogear.jpg" alt="Symphogear" class="anime-poster">
+      <img src="cover/Symphogear.jpg" alt="Symphogear" class="anime-poster">
       <p>Tsubasa Kazanari and Kanade Amou—the idol duo known as Zwei Wing—use their songs to power ancient weapons known as "symphogears" to combat a deadly alien race called the "Noise." While the general public is aware of the Noise's existence, knowledge of the symphogears are kept a secret. When the Noise attack one of Zwei Wing's concerts, Kanade sacrifices herself to protect a young girl named Hibiki Tachibana, leaving Tsubasa devastated and a fragment of her symphogear embedded within Hibiki. Two years pass and Hibiki is once again dragged into a Noise attack. While rescuing a young girl who has been left behind during the evacuation, she awakens the power of Kanade's symphogear lying within her. Although Tsubasa still grieves over the loss of Kanade, both girls must now learn to work together using their powers to defend humanity against the Noise.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
