--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
   <div class="step" id="result8">
     <div class="result-content">
       <h2>Recommendation: Afro Samurai</h2>
-      <img src="/cover/as.webp" alt="Afro Samurai" class="anime-poster">
+      <img src="/cover/as.jpg" alt="Afro Samurai" class="anime-poster">
       <p>A stylish, violent revenge tale following Afro Samurai's quest to avenge his father's death in a futuristic yet feudal Japan. Features Samuel L. Jackson's voice acting and a hip-hop influenced soundtrack.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -538,7 +538,7 @@
   <div class="step" id="result14">
     <div class="result-content">
       <h2>Recommendation: One Punch Man</h2>
-      <img src="/cover/opm.jpeg" alt="One Punch Man" class="anime-poster">
+      <img src="/cover/opm.jpg" alt="One Punch Man" class="anime-poster">
       <p>A hilarious yet action-packed series about Saitama, a hero so powerful he defeats any enemy with a single punch, and his search for a worthy challenge in a world full of monsters.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -574,7 +574,7 @@
   <div class="step" id="result18">
     <div class="result-content">
       <h2>Recommendation: Kuroko's Basketball</h2>
-      <img src="/cover/kb.jpeg" alt="Kuroko's Basketball" class="anime-poster">
+      <img src="/cover/kb.jpg" alt="Kuroko's Basketball" class="anime-poster">
       <p>A high school basketball team with former prodigies faces off against superhuman players in this exciting sports anime that blends realistic gameplay with over-the-top special abilities.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -592,7 +592,7 @@
   <div class="step" id="result20">
     <div class="result-content">
       <h2>Recommendation: FLCL</h2>
-      <img src="/cover/flcl.jpeg" alt="FLCL" class="anime-poster">
+      <img src="/cover/flcl.jpg" alt="FLCL" class="anime-poster">
       <p>A surreal coming-of-age story about 12-year-old Naota whose mundane life is interrupted by a wild alien woman on a vespa. Packed with symbolism, amazing animation, and The Pillows' iconic soundtrack.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
