--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
   <div class="step" id="result7">
     <div class="result-content">
       <h2>Recommendation: Demon Slayer</h2>
-      <img src="/cover/ds.jpg" alt="Demon Slayer" class="anime-poster">
+      <img src="cover/ds.jpg" alt="Demon Slayer" class="anime-poster">
       <p>After his family is slaughtered by demons, Tanjiro Kamado becomes a demon slayer to avenge his family and find a cure for his demon-turned sister. Features breathtaking animation and swordplay.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -484,7 +484,7 @@
   <div class="step" id="result8">
     <div class="result-content">
       <h2>Recommendation: Afro Samurai</h2>
-      <img src="/cover/as.jpg" alt="Afro Samurai" class="anime-poster">
+      <img src="cover/as.jpg" alt="Afro Samurai" class="anime-poster">
       <p>A stylish, violent revenge tale following Afro Samurai's quest to avenge his father's death in a futuristic yet feudal Japan. Features Samuel L. Jackson's voice acting and a hip-hop influenced soundtrack.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -493,7 +493,7 @@
   <div class="step" id="result9">
     <div class="result-content">
       <h2>Recommendation: Sword of the Stranger</h2>
-      <img src="/cover/sos.jpg" alt="Sword of the Stranger" class="anime-poster">
+      <img src="cover/sos.jpg" alt="Sword of the Stranger" class="anime-poster">
       <p>A beautifully animated historical film about a wandering swordsman who protects a young boy from Chinese warriors seeking his blood for an immortality elixir. Features some of the best sword fight choreography in anime.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -502,7 +502,7 @@
   <div class="step" id="result10">
     <div class="result-content">
       <h2>Recommendation: Attack on Titan</h2>
-      <img src="/cover/aot.jpg" alt="Attack on Titan" class="anime-poster">
+      <img src="cover/aot.jpg" alt="Attack on Titan" class="anime-poster">
       <p>Humanity fights for survival against man-eating Titans in this dark, politically complex series with incredible action sequences and one of anime's most gripping storylines.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -511,7 +511,7 @@
   <div class="step" id="result11">
     <div class="result-content">
       <h2>Recommendation: Kill la Kill</h2>
-      <img src="/cover/kil.jpg" alt="Kill la Kill" class="anime-poster">
+      <img src="cover/kil.jpg" alt="Kill la Kill" class="anime-poster">
       <p>An over-the-top action comedy about Ryuko Matoi's quest to avenge her father, using a sentient sailor uniform that grants superpowers. Features insane animation and non-stop energy.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -520,7 +520,7 @@
   <div class="step" id="result12">
     <div class="result-content">
       <h2>Recommendation: Black Lagoon</h2>
-      <img src="/cover/Black_Lagoon.jpg" alt="Black Lagoon" class="anime-poster">
+      <img src="cover/Black_Lagoon.jpg" alt="Black Lagoon" class="anime-poster">
       <p>A former businessman joins a crew of mercenary smugglers in Southeast Asia in this gritty, violent action series filled with memorable characters and intense gun battles.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -529,7 +529,7 @@
   <div class="step" id="result13">
     <div class="result-content">
       <h2>Recommendation: Gunsmith Cats</h2>
-      <img src="/cover/gc.jpg" alt="Gunsmith Cats" class="anime-poster">
+      <img src="cover/gc.jpg" alt="Gunsmith Cats" class="anime-poster">
       <p>A classic 90s OVA about bounty hunter Rally Vincent and her partner Minnie May Hopkins taking on Chicago's criminal underworld with expert marksmanship and explosive gadgets.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -538,7 +538,7 @@
   <div class="step" id="result14">
     <div class="result-content">
       <h2>Recommendation: One Punch Man</h2>
-      <img src="/cover/opm.jpg" alt="One Punch Man" class="anime-poster">
+      <img src="cover/opm.jpg" alt="One Punch Man" class="anime-poster">
       <p>A hilarious yet action-packed series about Saitama, a hero so powerful he defeats any enemy with a single punch, and his search for a worthy challenge in a world full of monsters.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -547,7 +547,7 @@
   <div class="step" id="result15">
     <div class="result-content">
       <h2>Recommendation: The God of High School</h2>
-      <img src="/cover/goh.jpg" alt="The God of High School" class="anime-poster">
+      <img src="cover/goh.jpg" alt="The God of High School" class="anime-poster">
       <p>A tournament anime where high school students with extraordinary martial arts abilities compete, blending modern fighting styles with supernatural powers and Korean mythology.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -556,7 +556,7 @@
   <div class="step" id="result16">
     <div class="result-content">
       <h2>Recommendation: Initial D</h2>
-      <img src="/cover/initiald.jpg" alt="Initial D" class="anime-poster">
+      <img src="cover/initiald.jpg" alt="Initial D" class="anime-poster">
       <p>The definitive street racing anime following Takumi Fujiwara, a delivery driver who unknowingly becomes a legendary downhill racer in his Toyota AE86, set to an iconic Eurobeat soundtrack.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -565,7 +565,7 @@
   <div class="step" id="result17">
     <div class="result-content">
       <h2>Recommendation: Redline</h2>
-      <img src="/cover/redline.jpg" alt="Redline" class="anime-poster">
+      <img src="cover/redline.jpg" alt="Redline" class="anime-poster">
       <p>A visually stunning film about the most dangerous racing tournament in the galaxy, featuring hand-drawn animation that took 7 years to complete and non-stop adrenaline-fueled action.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -574,7 +574,7 @@
   <div class="step" id="result18">
     <div class="result-content">
       <h2>Recommendation: Kuroko's Basketball</h2>
-      <img src="/cover/kb.jpg" alt="Kuroko's Basketball" class="anime-poster">
+      <img src="cover/kb.jpg" alt="Kuroko's Basketball" class="anime-poster">
       <p>A high school basketball team with former prodigies faces off against superhuman players in this exciting sports anime that blends realistic gameplay with over-the-top special abilities.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -583,7 +583,7 @@
   <div class="step" id="result19">
     <div class="result-content">
       <h2>Recommendation: Sk8 the Infinity</h2>
-      <img src="/cover/sk.jpg" alt="Sk8 the Infinity" class="anime-poster">
+      <img src="cover/sk.jpg" alt="Sk8 the Infinity" class="anime-poster">
       <p>A vibrant skateboarding anime following Reki and Langa as they navigate underground "S" races, featuring dynamic animation, diverse characters, and plenty of skateboarding action.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -592,7 +592,7 @@
   <div class="step" id="result20">
     <div class="result-content">
       <h2>Recommendation: FLCL</h2>
-      <img src="/cover/flcl.jpg" alt="FLCL" class="anime-poster">
+      <img src="cover/flcl.jpg" alt="FLCL" class="anime-poster">
       <p>A surreal coming-of-age story about 12-year-old Naota whose mundane life is interrupted by a wild alien woman on a vespa. Packed with symbolism, amazing animation, and The Pillows' iconic soundtrack.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
@@ -601,7 +601,7 @@
   <div class="step" id="result21">
     <div class="result-content">
       <h2>Recommendation: Steamboy</h2>
-      <img src="/cover/steam.jpg" alt="Steamboy" class="anime-poster">
+      <img src="cover/steam.jpg" alt="Steamboy" class="anime-poster">
       <p>A steampunk adventure film about young inventor Ray Steam who gets caught in a conflict between his grandfather and father over a revolutionary steam-based technology during Victorian England.</p>
       <button class="restart-button" onclick="goTo('step1')">🔄 Take Quiz Again</button>
     </div>
